追加漏れファイルをコミット

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     class="header">法人証明書</span>
             </div>
             <div class="navbar-end">
-                <ul class="navbar-item is-hidden-mobile header">
+                <ul class="navbar-item is-hidden-touch header">
                     <li class="navbar-item"><a href="#service">サービスについて</a></li>
                     <li class="navbar-item"><a href="#feature">特徴</a></li>
                     <li class="navbar-item"><a href="#plan">料金プラン</a></li>
@@ -40,7 +40,8 @@
                     <a href="/login" class="button is-primary is-small-mobile">ログイン</a>
                 </div>
     </nav>
-    <section class="hero-body is-fullheight-with-navbar">
+    <div class="hero-body is-fullheight-with-navbar">
+        <div class="firstview">
         <div class="columns">
             <div class="column is-7-desktop has-text-left">
                 <div class="has-text-primary">
@@ -63,8 +64,9 @@
             </div>
             <div class="column is-5-desktop has-text-centered"><img src="./img/main.png"></div>
         </div>
-        <div class="tile is-ancestor">
-            <div class="tile is-4 is-vertical is-parent">
+        </div>
+        <div class="tile is-ancestor is-11 is-offset-1">
+            <div class="tile is-vertical is-parent">
                 <div class="tile is-child box">
                     <p class="title">One</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque
@@ -75,8 +77,8 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque
                         tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.</p>
                 </div>
-            </div>
-            <div class="tile is-parent">
+            
+            <div class="tile is-child">
                 <div class="tile is-child box">
                     <p class="title">Three</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar, at
@@ -92,10 +94,10 @@
                         consequat libero. Donec leo ligula, maximus et pellentesque sed, gravida a metus. Cras
                         ullamcorper a nunc ac porta. Aliquam ut aliquet lacus, quis faucibus libero. Quisque non semper
                         leo.</p>
-                </div>
+                </div></div>
             </div>
         </div>
-    </section>
+    </div>
     <footer class="footer">
         <div class="content has-text-centered">
             © Realization, Inc. All Rights Reserved.
