--- a/index.html
+++ b/index.html
@@ -42,28 +42,29 @@
     </nav>
     <div class="hero-body is-fullheight-with-navbar">
         <div class="firstview">
-        <div class="columns">
-            <div class="column is-7-desktop has-text-left">
-                <div class="has-text-primary">
-                    <span class="is-size-1-desktop is-size-3 has-text-weight-bold">法人登記簿謄本</span><span
-                        class="is-size-3-desktop is-size-4">を</span><br><span
-                        class="is-size-1-desktop is-size-3 has-text-weight-bold">オンライン</span><span
-                        class="is-size-3-desktop is-size-4">で</span><span
-                        class="is-size-1-desktop is-size-3 has-text-weight-bold">カンタン取得！</span>
+            <div class="columns">
+                <div class="column is-7-desktop has-text-left">
+                    <div class="has-text-primary">
+                        <span class="is-size-1-desktop is-size-3 has-text-weight-bold">法人登記簿謄本</span><span
+                            class="is-size-3-desktop is-size-4">を</span><br><span
+                            class="is-size-1-desktop is-size-3 has-text-weight-bold">オンライン</span><span
+                            class="is-size-3-desktop is-size-4">で</span><span
+                            class="is-size-1-desktop is-size-3 has-text-weight-bold">カンタン取得！</span>
+                    </div>
+                    <div class="my-3 is-size-5-desktop is-size-6">
+                        <span>法務局に行く面倒な手間・交通費がゼロ！<br>たったの1分で法人登記簿謄本をお取り寄せできます。</span>
+                    </div>
+                    <div class="is-size-6-desktop is-size-6">
+                        <span class="mr-3">登記簿謄本の郵送​</span>
+                        <span class="has-text-weight-bold">初回<span class="is-size-5">540</span>円/(税別)</span>
+                    </div>
+                    <div>
+                        <span class="has-text-weight-light is-size-7">※ 合計2通以上のご請求で10%割引<br>※ 2通目以降は980円/通<br>※
+                            2〜3営業日でお届けします</span>
+                    </div>
                 </div>
-                <div class="my-3">
-                    <span>法務局に行く面倒な手間・交通費がゼロ！<br>たったの1分で法人登記簿謄本がお取り寄せできます。</span>
-                </div>
-                <div>
-                    <span class="mr-3">登記簿謄本の郵送​</span>
-                    <span class="has-text-weight-bold">初回<span class="is-size-5">540</span>円/(税別)</span>
-                </div>
-                <div>
-                    <span class="has-text-weight-light is-size-7">※ 合計2通以上のご請求で10%割引<br>※ 2通目以降は980円/通<br>※ 2〜3営業日でお届けします</span>
-                </div>
+                <div class="column is-5-desktop has-text-centered"><img src="./img/main.png"></div>
             </div>
-            <div class="column is-5-desktop has-text-centered"><img src="./img/main.png"></div>
-        </div>
         </div>
         <div class="tile is-ancestor is-11 is-offset-1">
             <div class="tile is-vertical is-parent">
@@ -77,24 +78,33 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque
                         tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.</p>
                 </div>
-            
-            <div class="tile is-child">
-                <div class="tile is-child box">
-                    <p class="title">Three</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar, at
-                        pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut.
-                        Morbi maximus, leo sit amet vehicula eleifend, nunc dui porta orci, quis semper odio felis ut
-                        quam.</p>
-                    <p>Suspendisse varius ligula in molestie lacinia. Maecenas varius eget ligula a sagittis.
-                        Pellentesque interdum, nisl nec interdum maximus, augue diam porttitor lorem, et sollicitudin
-                        felis neque sit amet erat. Maecenas imperdiet felis nisi, fringilla luctus felis hendrerit sit
-                        amet. Aenean vitae gravida diam, finibus dignissim turpis. Sed eget varius ligula, at volutpat
-                        tortor.</p>
-                    <p>Integer sollicitudin, tortor a mattis commodo, velit urna rhoncus erat, vitae congue lectus dolor
-                        consequat libero. Donec leo ligula, maximus et pellentesque sed, gravida a metus. Cras
-                        ullamcorper a nunc ac porta. Aliquam ut aliquet lacus, quis faucibus libero. Quisque non semper
-                        leo.</p>
-                </div></div>
+
+                <div class="tile is-child">
+                    <div class="tile is-child box">
+                        <p class="title">Three</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar,
+                            at
+                            pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus
+                            ut.
+                            Morbi maximus, leo sit amet vehicula eleifend, nunc dui porta orci, quis semper odio felis
+                            ut
+                            quam.</p>
+                        <p>Suspendisse varius ligula in molestie lacinia. Maecenas varius eget ligula a sagittis.
+                            Pellentesque interdum, nisl nec interdum maximus, augue diam porttitor lorem, et
+                            sollicitudin
+                            felis neque sit amet erat. Maecenas imperdiet felis nisi, fringilla luctus felis hendrerit
+                            sit
+                            amet. Aenean vitae gravida diam, finibus dignissim turpis. Sed eget varius ligula, at
+                            volutpat
+                            tortor.</p>
+                        <p>Integer sollicitudin, tortor a mattis commodo, velit urna rhoncus erat, vitae congue lectus
+                            dolor
+                            consequat libero. Donec leo ligula, maximus et pellentesque sed, gravida a metus. Cras
+                            ullamcorper a nunc ac porta. Aliquam ut aliquet lacus, quis faucibus libero. Quisque non
+                            semper
+                            leo.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
